# chatty-rs

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  justfile
config/: client_config.json  server_config.json
src/common/: channel.rs  client_config.rs  config.rs  discovery.rs  lib.rs  logs.rs  message.rs  net.rs  server_config.rs  user.rs  user_config.rs  utils.rs
src/common/net/: active.rs  auth.rs  error.rs  init.rs
