[package]
name = "chatty-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.1.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
tui = "0.19.0"
tui-textarea = { git = "https://github.com/rhysd/tui-textarea" }
crossterm = "0.25.0"
chrono = { version = "0.4.22", features = ["serde"] }


[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"